tests/negative/test_decl_bad_id_nonfirst.orb
fnc main() {
    i32 x = 100, switch = 200;
}